Bug 148996, enable the feature of Drag and Drop on Bookmarks button on the personal toolbar.  r=bryner, sr=blizzard.